New in v0.13.4 (??????????)
---------------------------

Regressing and restoring should now take less memory when processing
large directories (noticed by Luke Mewburn and others).

When regressing, remove mirror_metadata and similar increments first.
This will hopefully help regressing a backup that failed because disk
was full (reported by Erik Forsberg).

Fixed remote quoting errors found by Daniel Drucker.

Fixed handling of (lack of) daylight savings time.  Earlier bug would
cause some files to be marked an hour later.  Thanks to Troels Arvin
and Farkas Levente for bug report.

Altered file selection when restoring so excluded files will not be
deleted from the target dir.  The old behavior was technically
intended and documented but not very convenient.  Thanks to Oliver
Kaltenecker for bug report.


New in v0.13.3 (2003/10/14)
---------------------------

Fixed some of the --restrict options which would cause spurious
violation errors.

--list-changed-since and --list-at-time now work remotely.
Thanks to Morten Werner Olsen for bug report.

Fixed logic bug that could make restoring extremely slow and waste
memory.  Thanks for Jacques Botha for report.

Fixed bug restoring some directories when mirror_metadata file was
missing (as when made by 0.10.x version).

Regressing and restoring as non-root user now works on directories
that contain unreadable files and directories as long as they are
owned by that user.  Bug report by Arkadiusz Miskiewicz.  Hopefully
this is the last of the unreadable file bugs...

Rewrote hard link tracking system.  New way should use less memory.

Fixed bug causing rdiff-backup to crash when backing up from system
supporting EAs/ACLs to one that didn't.


New in v0.13.2 (2003/09/16)
---------------------------

Change ownership policy and added --user-mapping-file and
--group-mapping-file switches.  See man page for more information.

Added option --never-drop-acls to cause fatal error instead of